NetBSD Problem Report #50899

From www@NetBSD.org  Sun Mar  6 17:31:55 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 922587A13F
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  6 Mar 2016 17:31:55 +0000 (UTC)
Message-Id: <20160306173154.7A60D7ACC5@mollari.NetBSD.org>
Date: Sun,  6 Mar 2016 17:31:54 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/netinet/sctputil.c:857: sloppy call to memset ?
X-Send-Pr-Version: www-1.0

>Number:         50899
>Category:       kern
>Synopsis:       src/sys/netinet/sctputil.c:857: sloppy call to memset ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Mar 06 17:35:00 +0000 2016
>Closed-Date:    Sun Mar 06 20:13:47 +0000 2016
>Last-Modified:  Sun Mar 06 20:13:47 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160305
>Organization:
>Environment:
>Description:
[src/sys/netinet/sctputil.c:857] -> [src/sys/netinet/sctputil.c:858]: (performance) Buffer 'new_array' is being written before its old content has been used.

    memset(new_array, 0, new_size);
    memcpy(new_array, asoc->mapping_array, asoc->mapping_array_size);

This could be coded up in a faster fashion.

Suggest only zero those bytes that the memcpy doesn't touch.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50899 CVS commit: src/sys/netinet
Date: Sun, 6 Mar 2016 14:46:05 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Mar  6 19:46:05 UTC 2016

 Modified Files:
 	src/sys/netinet: sctputil.c

 Log Message:
 PR/50899: David Binderman: optimize memset


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/sys/netinet/sctputil.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 06 Mar 2016 20:13:47 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.