PR/50899: David Binderman: optimize memset